Refactor DataMunging to DRY